# Kelley-HOPE-25---E-Learning-Project

./: Home.html  README.md  pyproject.toml  requirements.txt
Frontend/: package-lock.json  package.json  styles.css
Frontend/src/: App.js  SimpleChatUI.jsx
Frontend/subfolder/src/: SimpleChatUI.jsx
RAG/: __init__.py  config.yaml  embedding.py  pdfprocess.py  rag.py  requirements_rag.txt
