[tool.poetry]
package-mode = false

[project]
name = "digitalhuman"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ollama (>=0.5.1,<0.6.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "llvmlite (>=0.39,<1.0)",
    "coqui-tts (>=0.27.0,<0.28.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "quart (>=0.20.0,<0.21.0)",
    "quart-cors (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
